# onc-data-wrangler-plugin

./: .gitignore  .mcp.json  README.md  REVIEW_REPORT.md  pyproject.toml  settings.json
.claude-plugin/: marketplace.json  plugin.json
agents/: analysis-worker.md  compression-worker.md  data-validator-worker.md  discrepancy-worker.md  document-gen-worker.md  event-list-worker.md  extraction-worker.md  question-extraction-worker.md  structured-data-worker.md  synthetic-data-worker.md  validation-worker.md  verify-worker.md
configs/: example_project.yaml
docs/: R_INSTALL.md
evaluation/: EVALUATION_SUMMARY.md  eval_config.yaml  evaluate_accuracy.py  extract_ground_truth.py  generate_simple_docs.py  get_next_batch.py  ground_truth.json  parse_all_events.py  patient_list.json  prepare_notes_csv.py  progress.json  raw_events_scenario_0.txt  raw_events_scenario_1.txt  raw_events_scenario_2.txt  raw_events_scenario_3.txt  raw_events_scenario_4.txt  raw_events_scenario_5.txt  raw_events_scenario_6.txt  raw_events_scenario_7.txt  raw_events_scenario_8.txt  raw_events_scenario_9.txt  scenarios.json
example_reproduce_paper_PMC10172395_claude_code_opus_4.7/: DATA_CONTEXT.txt  _dl.err  _dl.out  _phase4_stats.json  agentic_analysis_results.xlsx  discrepancy_analysis_input.xlsx  discrepancy_analysis_results.xlsx  generate_questions.py  paper.txt  paper_context.txt  paper_metadata.json  questions_list.json  questions_only.xlsx  questions_with_answers.xlsx  reproduction_summary.md  validation_result.json
example_synthetic_data/: active_config.yaml
scripts/: mcp_query_server.py  (+5 more)
(+2009 files in other folders)
